--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ body {
 .form {
   background-color: #08d215;
   color: #fff;
-  width: 400px;
+  width: 600px;
   margin: 20px auto;
   padding: 25px;
   border-radius: 10px;
@@ -178,6 +178,16 @@ body {
   outline: none;
   box-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
   background-color: #fff;
+}
+
+.area {
+  width: 100%;
+  height: 100px;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.9);
+  transition: all 0.3s ease;
 }
 
 .pictures {
